--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     
+    <p>
+        echo "# gittutotial" >> README.md
+git init
+git add README.md
+git commit -m "first commit"
+git branch -M main
+git remote add origin https://github.com/arnoldnievera/gittutotial.git
+git push -u origin main
+
+    </p>
 </body>
 </html>
